# ride

./: .check_includes.py.swp  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Doxyfile.ini  LICENSE  LICENSE.txt  README.md  appveyor.yml  aptget.sh  bintray-template.json  build-osx.md  c_flag_overrides.cmake  call-clang-format.py  call-clang-tidy.py  check_includes.py  code-stat-everything.txt  code-stat-switcher.txt  cpack-config.cmake  cpplint.py  gource.pyw  pylintrc  readme.md  todo.md  workbench.build.jsonc
api/: CMakeLists.txt  color.cc  color.h  renderer.cc  renderer.h
api/api/: app.cc  app.h  color.cc  color.h  file.h  font.cc  font.h  image.cc  image.h  numeric.h  rect.cc  rencache.cc  rencache.h  renderer.cc  renderer.h  scale.cc  size.cc  size.h  string.cc  string.h  vec2.h
apps/: CMakeLists.txt  main.cc  main.wx.cc
apps/resources/: commonimages.h
apps/resources/icons/: edit_copy.xpm  edit_cut.xpm  file_settings.xpm  icon_ac_function.xpm  project_bench.xpm  project_build.xpm  project_stop.xpm
data/: CMakeLists.txt
data/cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
data/fonts/: CMakeLists.txt  readme.md
data/install/: cpack-config.cmake
data/install/gfx/: dmg-install.pdn
data/logo/: CMakeLists.txt
data/samples/: cmake.cmake  lua.lua
libs/api/: CMakeLists.txt
libs/api/examples/: font.cc  images.cc  scope.cc  squares.cc
libs/api/src/api/: app.cc  app.h  assert.h  c.cc  cc.cc  cc.h  color.cc  cursorcache.cc  cursorcache.h  dependency_glm.h  dependency_opengl.cc  dependency_opengl.h  enumstringmap.cc  enumstringmap.h  file.cc  filesystem.cc  font.cc  font.h  humane_sort.cc  humane_sort.h  image.cc  image.h  ints.cc  ints.h  key.cc  (+32 more)
libs/apiact/: CMakeLists.txt
libs/apiact/apigl/: CMakeLists.txt
libs/apiact/apiwx/: CMakeLists.txt
libs/apiact/examples/: font.cc  images.cc  scope.cc  squares.cc
libs/apigl/: CMakeLists.txt
libs/apigl/examples/: font.cc  images.cc  scope.cc  squares.cc
libs/assert/: CMakeLists.txt
libs/backends/: CMakeLists.txt
libs/backends/apigl/: CMakeLists.txt
libs/backends/apiwx/: CMakeLists.txt
libs/backends/blit/: CMakeLists.txt
libs/backends/gl/: CMakeLists.txt
libs/backends/sdl_base/: CMakeLists.txt
libs/backends/wx/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/libride/: CMakeLists.txt
libs/libride/data/: auix.h  buildconfigurationsdlg.h  createnewprojectdlg.h  fileedit.cc  form.cc  language.cc  loadresult.h  outputcontrol.cc  pathtester.cc  stringutils.cc
libs/ride/: CMakeLists.txt
libs/ride/data/: builtinthemes.cc  cargo.h  cmdrunner.h  compilermessage.h  compileutils.h  filepropertiesdlg.cc  filepropertiesdlg.h  loadresult.cc  mainwindow.cc  mainwindow.h  pathtester.h  projectexplorer.h  projectsettingsdlg.cc  projectsettingsdlg.h  proto.cc  quickopendlg.cc  runconfigurationsdlg.h  settings.proto  settingseditortab.cc  settingsmarkerstab.cc  stcutils.cc  togui.cc  togui.h  variableeditor.cc  wxid.h  wxutils.h
ride/: CMakeLists.txt  auix.cc  auix.h  autocomplete.cc  autocomplete.h  buildconfigurationsdlg.cc  buildconfigurationsdlg.h  builtintemplates.cc  builtintemplates.h  builtinthemes.cc  builtinthemes.h  bundle-info.plist  cargo.cc  cargo.h  cmdrunner.cc  cmdrunner.h  compilermessage.cc  compilermessage.cpp  compilermessage.h  compileutils.cc  compileutils.h  configurationsdlg.cc  configurationsdlg.h  createnewfiledlg.cc  createnewfiledlg.h  createnewprojectdlg.cc  createnewprojectdlg.h  deletefolderdlg.cc  deletefolderdlg.h  dialogs.fbp  dpiaware.manifest.xml  driver.cc  driver.h  enabledisable.cc  enabledisable.h  enviroment.cc  enviroment.h  fileedit.cc  fileedit.cpp  fileedit.h  (+102 more)
ride/games/bombs/: bombs.cpp  bombs.h  bombs_glue.cc  glue.cc  glue.h
ride/games/forty/: canvas.cpp  canvas.h  card.cpp  forty.cpp  forty.h  forty_glue.cc  forty_glue.h  game.cpp  game.h  pile.cpp
ride/resources/: README.md  icons.h  resources.rc
ride/resources/icons/: create_app.xpm  create_library.xpm  edit_copy.xpm  edit_cut.xpm  edit_file_properties.xpm  edit_make_lowercase.xpm  edit_make_uppercase.xpm  edit_paste.xpm  edit_redo.xpm  edit_tab_add.xpm  edit_tab_remove.xpm  edit_undo.xpm  file_normal.xpm  file_quit.xpm  file_settings.xpm  file_warning.xpm  folder_error.xpm  folder_normal.xpm  folder_warning.xpm  icon_ac_crate.xpm  icon_ac_fnarg.xpm  icon_ac_function.xpm  icon_ac_keyword.xpm  icon_ac_let.xpm  icon_ac_module.xpm  icon_ac_snippet.xpm  icon_ac_struct.xpm  icon_ac_structfield.xpm  project_bench.xpm  project_build.xpm  project_clean.xpm  project_debug.xpm  project_doc.xpm  project_rebuild.xpm  project_run.xpm  project_settings.xpm  project_stop.xpm  project_test.xpm  project_update.xpm
ride/switcher/: ctrl.cc  ctrl.h  dialog.cc  dialog.h  group.cc  group.h  item.cc  item.h  itemlist.cc  itemlist.h  readme.md  style.cc  style.h
runner/: CMakeLists.txt  main.cc  main.wx.cc  rencache.cc  rencache.h  renderer.cc
runner/resources/: application.icns
runner/resources/icons/: edit_file_properties.xpm  edit_tab_remove.xpm  file_quit.xpm  folder_normal.xpm  icon_ac_module.xpm  project_test.xpm
src/: CMakeLists.txt  main.rs  main_gtk.rs  main_win32.rs
src/ride/: auix.cc  auix.h  autocomplete.cc  autocomplete.h  buildconfigurationsdlg.cc  buildconfigurationsdlg.h  builtinthemes.cc  builtinthemes.h  cargo.cc  cargo.h  cmdrunner.cc  cmdrunner.h  compilermessage.cc  compilermessage.h  compileutils.cc  compileutils.h  createnewfiledlg.cc  createnewfiledlg.h  createnewprojectdlg.cc  createnewprojectdlg.h  deletefolderdlg.cc  deletefolderdlg.h  enabledisable.cc  enabledisable.h  enviroment.cc  enviroment.h  fileedit.cc  fileedit.h  filepropertiesdlg.cc  filepropertiesdlg.h  finddlg.cc  finddlg.h  form.cc  form.h  guilist.h  language.cc  language.h  loadresult.cc  loadresult.h  macdylibbundler.cmake  (+65 more)
src/ride/resources/: commonimages.h  icons.h
src/ride/switcher/: ctrl.cc  ctrl.h  dialog.cc  dialog.h  group.cc  group.h  item.cc  item.h  itemlist.cc  itemlist.h  style.cc  style.h
(+365 files in other folders)
