[package]
name = "ride"
version = "0.1.0"
authors = ["Gustav <sir.gustav.the.coder@gmail.com>"]

[features]
default = []
backend_gtk =["gtk", "cairo-rs"]
backend_win32 =["winapi", "user32-sys", "kernel32-sys", "gdi32-sys"]

[dependencies]

[dependencies.gtk]
optional = true
version = "0.2.0"
features = ["v3_16"]

[dependencies.cairo-rs]
optional = true
version = "0.2.0"

[dependencies.winapi]
optional = true
version = "0.2.*"

[dependencies.user32-sys]
optional = true
version = "0.2.*"

[dependencies.kernel32-sys]
optional = true
version = "0.2.*"

[dependencies.gdi32-sys]
optional = true
version = "0.2.*"
